# VS-code-JAVARUSH-lessons

./: .gitignore  about.html  blog.html  index.html  post.html  pyproject.toml  service.html
ExampleProject/: .dockerignore  docker-compose.yml  readme.md
JS lesson 6/: forJS1.html  forJS2.html  forJS3.html  forJS4.html  forJS5.html  forJS6.html  index.js  index_for_JS.html  practise.html  script_1.js
JS lesson 7/: index7.html  step01.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js
JS lesson 8/: index8.html  step1.js  step10.js  step11.js  step12.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js  step9.js
JS lesson 9/: index9.html  step1.js  step2.js  step3.js  step4.js  step5.js  step6.js  step7.js  step8.js
L14Docker1/: .dockerignore  Dockerfile  app.py  readme.md
L15Docker2/: .dockerignore  readme.md
L16Docker3/: Dockerfile  app.py  readme.md
L17DockerCompose/: Dockerfile  Example-docker-compose.yml  readme.md
L17DockerCompose/step2app/: Dockerfile  app.py  docker-compose.yml
L17DockerCompose/step3fastapi/: Dockerfile
L17DockerCompose/step3fastapi/app/: main.py  requirements.txt
L18DockerCompose/: readme.md
L18DockerCompose/step2/: Dockerfile  app.py  docker-compose.yml
L18DockerCompose/step3/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
L19Poetry/: pyproject.toml  readme.md  requirements.txt
L19Poetry/venvL19/: pyvenv.cfg
L19Poetry/venvL19/Scripts/: activate  activate.bat
L20DockerSwarm/: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
css/: style.css
(+2 files in other folders)
