[project]
name = "vs code javarush lessons"
version = "0.1.0"
description = ""
authors = [
    {name = "Aram",email = "granturis@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
