[project]
name = "l19poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Aram",email = "granturis@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.121.2,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
